--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
+    "react-input-emoji": "^5.6.5",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "yup": "^1.3.2"
