--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-input-emoji": "^5.6.5",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
+    "socket.io-client": "^4.7.2",
     "yup": "^1.3.2"
   },
   "devDependencies": {
