--- a/socket/package.json
+++ b/socket/package.json
@@ -3,8 +3,13 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.3.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.6.3",
+    "nodemon": "^3.0.1",
     "socket.io": "^4.7.2",
-    "nodemon": "^3.0.1"
+    "validator": "^13.11.0"
   },
   "scripts": {
     "start": "node index.js",
