--- a/client/package.json
+++ b/client/package.json
@@ -20,11 +20,13 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-input-emoji": "^5.6.5",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "redux-thunk": "^2.4.2",
     "socket.io-client": "^4.7.2",
+    "styled-components": "^6.1.1",
     "yup": "^1.3.2"
   },
   "devDependencies": {
