--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "redux-thunk": "^2.4.2",
     "socket.io-client": "^4.7.2",
     "styled-components": "^6.1.1",
+    "validator": "^13.11.0",
     "yup": "^1.3.2"
   },
   "devDependencies": {
